# c-template-project

./: CMakeLists.txt  conanfile.txt
linux_env/: .env  Dockerfile  build_run_container.ps1  destroy_container_img.ps1  docker-compose.yml  entrypoint.sh
modules/app/: CMakeLists.txt
modules/app/src/: Main.cpp
